--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <body>
 <h1 style="text-align: center">HamunTech Apps Privacy Policies </h1>
-<p style="text-align: center">Site: <a href="https://hamuntech.com/">https://hamuntech.com/</a> || Repository: <a href="https://github.com/hamuntech">https://github.com/hamuntech</a></p>
+<p style="text-align: center">(<strong>Site:</strong> <a href="https://hamuntech.com/">https://hamuntech.com/</a> || <strong>Repository:</strong> <a href="https://github.com/hamuntech">https://github.com/hamuntech</a>)</p>
 <p style="text-align: center">App # 1</p>
   <p style="text-align: center">App # 2</p>
 </body>
