--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <body>
-  <h1 style="text-align: center">HamunTech App Privacy Policies </h1>
+  <h1 style="text-align: center">App Privacy Policies</h1>
   <p style="text-align: center">(<strong>Website:</strong> <a href="https://hamuntech.com/">https://hamuntech.com/</a> || <strong>Repository:</strong> <a href="https://github.com/hamuntech">https://github.com/hamuntech</a>)</p>
   <p style="text-align: center">App # 1</p>
   <p style="text-align: center">App # 2</p>
