--- a/TravelChronicle.html
+++ b/TravelChronicle.html
@@ -2,10 +2,9 @@
 layout: default
 ---
 <body>
-  <a href="https://hamuntech.github.io/"><img src='home.png' width='68' height='68' alt='Home' /></a>
-  <h1 style="text-align: center">Privacy Policy for TravelChronicle App</h1>
-  <p style="text-align: center">(<strong>Website:</strong> <a href="https://hamuntech.com/">https://hamuntech.com/</a> || <strong>Repository:</strong> <a href="https://github.com/hamuntech">https://github.com/hamuntech</a>)</p>
-  <p>This privacy policy governs your use of the software application TravelChronicle for mobile devices that was created by Mo Aslam at HamunTech. The Application is a media organizer app that allows users to store the audio, video and pictures locally on the phone in reference to the device location, and retrieve and edit these assets later. It also allows users to share these files with others via the Apple IOS built-in sharing capabilities. This app includes a set of Image Filters as well that users can apply to pictures.</p>
+	<a href="https://hamuntech.github.io/"><img src="../../../Dev/Graphics/ionicons-2.0.1/png/512/home.png" width="68" height="68" alt=""/></a>
+<h1 style="text-align: center">Privacy Policy for TravelChronicle App</h1>
+	<p>This privacy policy governs your use of the software application TravelChronicle for mobile devices that was created by Mo Aslam at HamunTech. The Application is a media organizer app that allows users to store the audio, video and pictures locally on the phone in reference to the device location, and retrieve and edit these assets later. It also allows users to share these files with others via the Apple IOS built-in sharing capabilities. This app includes a set of Image Filters as well that users can apply to pictures.</p>
 	
 	<h2>What information does the Application obtain and how is it used?</h2>
 	<h3>User Provided Information</h3>
@@ -13,7 +12,7 @@ layout: default
 	<h3>Automatically Collected Information </h3>
 	<p>This app does not collect, process, analyze or transmit any user or device related data to any other devices or entities.</p>
 	<h2>Does the Application collect precise real time location information of the device?</h2>
-	<p>The app uses your device’s geolocation GPS coordinates to determine the current location. This location is persisted locally on the user’s device and is not transmitted to any other devices or entities. No location data is collected or persisted on any other devices other than the app user’s device.</p>
+	<p>The app uses your device’s geolocation GPS coordinates to determine the current location. This location is persisted locally on the user’s device and is not transmitted to any other devices or entities. No location data is collected or persisted on any other devices other than the app user’s device. You have the ability to share your location with other people via built in iPhone sharing capabilities.</p>
 	<h2>Do third parties see and/or have access to information obtained by the Application?</h2>
 	<p>No third parties have any visibility to user’s application data. </p>
 	<h2>Data Retention Policy, Managing Your Information</h2>
