--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@ layout: default
   <h1 style="text-align: center">App Privacy Policies</h1>
   <p style="text-align: center">(<strong>Website:</strong> <a href="https://hamuntech.com/">https://hamuntech.com/</a> || <strong>Repository:</strong> <a href="https://github.com/hamuntech">https://github.com/hamuntech</a>)</p>
   <p style="text-align: center"><a href="TravelChronicle.html">Privacy Policy for TravelChronicle App</a></p>
+  <p style="text-align: center"><a href="Nigrani.html">Privacy Policy for Nigrani App</a></p>
 </body>
