--- a/Nigrani.html
+++ b/Nigrani.html
@@ -4,7 +4,7 @@ layout: default
 <body>
 	<a href="https://hamuntech.github.io/"><img src="../../../Dev/Graphics/ionicons-2.0.1/png/512/home.png" width="68" height="68" alt=""/></a>
 <h1 style="text-align: center">Privacy Policy for Nigrani App</h1>
-	<p>This privacy policy governs your use of the software application Nigrani for mobile devices that was created by Mo Aslam at HamunTech. The Application is a media organizer app that allows users to store the audio, video and pictures locally on the phone in reference to the device location, and retrieve and edit these assets later. It also allows users to share these files with others via the Apple IOS built-in sharing capabilities. This app includes a set of Image Filters as well that users can apply to pictures.</p>
+	<p>This privacy policy governs your use of the software application Nigrani for mobile devices that was created by Mo Aslam at HamunTech. The Application is a device tracker that uses the gelocation coordinates of an Android device to determine the location. The user of the tracked device has to agree to be tracked by the owner of the tracking device by adding the tracking user as a contact in this app on their own device to provide their explicit consent. </p>
 	
 	<h2>What information does the Application obtain and how is it used?</h2>
 	<h3>User Provided Information</h3>
