--- a/TravelChronicle.html
+++ b/TravelChronicle.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <body>
-	<a href="https://hamuntech.github.io/"><img src="../../../Dev/Graphics/ionicons-2.0.1/png/512/home.png" width="68" height="68" alt=""/></a>
+	<a href="https://hamuntech.github.io/"><img src="home.png" width="68" height="68" alt=""/></a>
 <h1 style="text-align: center">Privacy Policy for TravelChronicle App</h1>
 	<p>This privacy policy governs your use of the software application TravelChronicle for mobile devices that was created by Mo Aslam at HamunTech. The Application is a media organizer app that allows users to store the audio, video and pictures locally on the phone in reference to the device location, and retrieve and edit these assets later. It also allows users to share these files with others via the Apple IOS built-in sharing capabilities. This app includes a set of Image Filters as well that users can apply to pictures.</p>
 	
