--- a/TravelChronicle.html
+++ b/TravelChronicle.html
@@ -12,7 +12,7 @@ layout: default
 	<h3>Automatically Collected Information </h3>
 	<p>This app does not collect, process, analyze or transmit any user or device related data to any other devices or entities.</p>
 	<h2>Does the Application collect precise real time location information of the device?</h2>
-	<p>The app uses your device’s geolocation GPS coordinates to determine the current location. This location is persisted locally on the user’s device and is not transmitted to any other devices or entities. No location data is collected or persisted on any other devices other than the app user’s device. You have the ability to share your location with other people via built in iPhone sharing capabilities.</p>
+	<p>The app uses your device’s geolocation GPS coordinates to determine the current location. This location is persisted locally on the user’s device and is not transmitted to any other devices or entities. No location data is collected or persisted on any other devices other than the app user’s device. You have the ability to share your content with other people via built in iPhone sharing capabilities.</p>
 	<h2>Do third parties see and/or have access to information obtained by the Application?</h2>
 	<p>No third parties have any visibility to user’s application data. </p>
 	<h2>Data Retention Policy, Managing Your Information</h2>
